# Oz-project_fortune

./: .gitignore  db.sqlite3  pyproject.toml
.config_secret/: secret_common.json
allzodiac/: apps.py  models.py  urls.py  views.py
allzodiac/migrations/: 0001_initial.py
dailyquote/: apps.py  models.py  urls.py  views.py
dailyquote/migrations/: 0001_initial.py
fortune/: asgi.py  settings.py  urls.py  wsgi.py
horoscope/: models.py  urls.py  views.py
horoscope/migrations/: 0001_initial.py  0002_alter_userbirthday_birth_date.py
mbti/: apps.py  models.py  urls.py  views.py
mbti/migrations/: 0001_initial.py
static/: daily.css  h.js  hor.css  login.css  mbti.css  script.js  signup.css  style.css  style2.css  style5.css  styles.css  zodiac.css
templates/: allzodiac.html  daily.html  horoscope.html  login.html  mbti.html  signup.html  zodiac.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_member.py
zodiac/: apps.py  models.py  urls.py  views.py
zodiac/migrations/: 0001_initial.py  0002_alter_zodiac_today_fortune.py
